# os

./: .gdbinit  .gitignore  CMakeLists.txt  linker.ld
include/kernel/: kernel.h
include/kernel/io/: io.h
iso/: CMakeLists.txt  grub.cfg
kernel/: CMakeLists.txt
kernel/include/kernel/: kernel.h
kernel/include/kernel/io/: serial.h  tty.h
kernel/src/boot/: bootstrap64.nasm  multiboot2.nasm
kernel/src/kernel/: kernel.c
kernel/src/kernel/io/: io.c  serial.c  tty.c
libk/: CMakeLists.txt
libk/include/: ctype.h  stdio.h  string.h
libk/lib/stdio/: printf.c  putchar.c  puts.c
libk/lib/stdlib/: abort.c
src/boot/: boot.nasm  bootstrap64.nasm  multiboot.nasm  multiboot2.nasm
src/kernel/: kernel.c
src/kernel/io/: io.c  serial.c
